@@ -2,6 +2,12 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI="3"
+
+PYTHON_DEPEND="2"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS=""
+
 inherit distutils
 
 DESCRIPTION="A small ORM for python"
@@ -12,3 +18,5 @@ SLOT="0"
 KEYWORDS="amd64 ~x86"
 LICENSE="as-is"
 IUSE=""
+
+PYTHON_MODNAME=${PN}.py
