@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Apr 2011; Justin Lecher <jlec@gentoo.org> peewee-0.3.0.ebuild:
+  Fix for python ABI stuff
+
   30 Mar 2011; Justin Lecher <jlec@gentoo.org> peewee-0.3.0.ebuild,
   +metadata.xml:
   License corrected
